overlapping issue and alignment issue on responsive screen fixed

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "pto";
 @import "authentication";
 @import "rc-steps";
+@import "carousel";
 
 @layer base {
   @font-face {
@@ -612,15 +613,4 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px white inset !important;
-}
-
-.player-wrapper {
-  position: relative;
-  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
-}
-
-.react-player {
-  position: absolute;
-  top: 0;
-  left: 0;
 }
